# ETesting-Center

./: .gitignore  README.md  build.ps1  build_log.txt  buildout.txt  pyproject.toml  rebuild.bat  rebuild_20260717_172958_978.bat  requirements.txt
src/etesting_center/: __init__.py  cli.py  main.py  main_20260717_115054_709.py
src/etesting_center/data/: hashes.json
src/etesting_center/data/rules/: malware_patterns.yar  sample_rules.yar
src/etesting_center/engine/: hash_db.py  hashing.py  heuristics.py  models.py  pe_analysis.py  scanner.py  signature_verify.py  yara_support.py
src/etesting_center/reports/: writers.py
tests/sample_scan/: safe.txt  suspicious.ps1
